--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url='https://api.whatsapp.com/send?phone=601137619413&text=REGISTER%20WIN88Bet'" />
+    <meta http-equiv="refresh" content="0; url='https://api.whatsapp.com/send?phone=601162001407&text=Welcome%20back%20bonus%2050%25'" />
     <title>Redirecting...</title>
   </head>
   <body>
